# looper

./: .env.sample  .gitignore  Cargo.toml  README.md  Rocket.toml  TODO.md  build.rs  docker-compose.network.yaml  docker-compose.yaml
.github/workflows/: 01-lint.yaml  02-test.yaml  03-build.yaml  pr.yaml
client/: .gitignore  Cargo.toml
client/src/: client.rs  main.rs
client/src/services/: loop_out.rs  mod.rs
config/: example.toml  test.toml
http-requests/: loop_out.http
init/: looper.sql
migrations/: V1__initial.sql
migrations/2023-10-22-204306_loop_outs/: up.sql
migrations/2023-10-22-204307_invoices/: down.sql  up.sql
migrations/2023-10-22-204308_scripts/: up.sql
migrations/2023-10-22-204309_scripts/: up.sql
migrations/2023-10-22-204309_utxos/: down.sql  up.sql
migrations/2023-10-22-204314_utxos/: up.sql
migrations/2023-10-22-204328_loop_outs/: down.sql  up.sql
proto/lnd/signrpc/: signer.proto
proto/lnd/walletrpc/: walletkit.proto
src/: api.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs  settings.rs  wallet.rs
src/api/: errors.rs  mod.rs  server.rs
src/lnd/: client.rs  invoice_tracker.rs  mod.rs
src/mempool/: mod.rs
src/pgdb/: invoice.rs  loopout.rs  migrations.rs  mod.rs  pg.rs
src/services/: error.rs  errors.rs  loop_out.rs  mod.rs  model.rs
src/utils/: mod.rs  utils.rs
